edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

// Represents the data structure for a Gen2 Technical Data transfer.
// This structure is used for both v1 (TREP 0x25) and v2 (TREP 0x35).
// See Appendix 7, Section 2.2.6.6.
message TechnicalDataGen2 {

  message VuIdentification {
    // See Appendix 1, 2.205
    string manufacturer_name = 1;
    string manufacturer_address = 2;
    string part_number = 3;
    string serial_number = 4;
    string software_version = 5;
    uint32 software_installation_date_seconds = 6;
    uint32 manufacturing_date_seconds = 7;
    string approval_number = 8;
  }

  message PairedSensor {
    // See Appendix 1, 2.145
    string serial_number = 1;
    string approval_number = 2;
    uint32 pairing_date_seconds = 3;
  }

  message CoupledGnss {
    // See Appendix 1, 2.133
    string serial_number = 1;
    string approval_number = 2;
    uint32 coupling_date_seconds = 3;
  }

  message CalibrationRecord {
    // See Appendix 1, 2.174
    uint32 purpose = 1;
    string workshop_name = 2;
    string workshop_address = 3;
    string workshop_card_number = 4;
    uint32 workshop_card_expiry_date = 5;
    string vin = 6;
    string vrn = 7;
    uint32 registering_nation = 8;
    uint32 w_vehicle_characteristic_constant = 9;
    uint32 k_constant_of_recording_equipment = 10;
    uint32 l_tyre_circumference_mm = 11;
    string tyre_size = 12;
    uint32 authorised_speed_kmph = 13;
    uint32 old_odometer_value_km = 14;
    uint32 new_odometer_value_km = 15;
    uint32 old_time_value_seconds = 16;
    uint32 new_time_value_seconds = 17;
    uint32 next_calibration_date_seconds = 18;
  }

  message CardRecord {
    // See Appendix 1, 2.179
    string full_card_number = 1;
    bytes card_structure_version = 2;
    uint32 card_type = 3;
  }

  message ItsConsentRecord {
    // See Appendix 1, 2.207
    string full_card_number = 1;
    uint32 consent_status = 2;
  }

  message PowerSupplyInterruptionRecord {
    // See Appendix 1, 2.240
    uint32 timestamp_seconds = 1;
    uint32 card_slot_number = 2;
  }

  VuIdentification vu_identification = 1;
  repeated PairedSensor paired_sensors = 2;
  repeated CoupledGnss coupled_gnss_facilities = 3;
  repeated CalibrationRecord calibration_records = 4;
  repeated CardRecord card_records = 5;
  repeated ItsConsentRecord its_consent_records = 6;
  repeated PowerSupplyInterruptionRecord power_supply_interruptions = 7;

  // Gen2 signature (ECC). See Appendix 1, 2.149.
  bytes signature = 8;
}
